syntax = "proto3";

package pb;


message InvoiceRecord{
    float amount = 1;
    string userid = 2;
    repeated OrderItemRecord items = 3;
}

message OrderItemRecord{
    string productid = 1;
    float price = 2;
    string userid = 3;
    string cartid = 4;
    int32 quantity = 5;
    string name = 6;
}

message CreateOrderRequest{
    float amount = 1;
    string userid = 2;
    repeated OrderItemRecord items = 3;
}

message CreateCartRequest{
    OrderItemRecord item = 1;
}

message CreatedCartResponse{
    string id = 1;
    string err = 2;
}

message CreatedOrderResponse{
    string id = 1;
    string err = 2;
}

message GetOrdersRequest{
    string userid = 1;
    string tenantid = 2;
    int32 pageIndex = 3;
    int32 pageSize = 4;
}

message GetOrdersResponse{
    string userid = 1;
    string tenantid = 2;
    int32 pageIndex = 3;
    int32 pageSize = 4;
    repeated InvoiceRecord invoices = 5;
    string err = 6;
}

message GetOrderRequest{
    string orderid = 1;
}

message GetOrderResponse{
    InvoiceRecord invoice = 1;
    string err = 2;
}

message GetCartItemsRequest{
    string userid = 1;
}

message GetCartItemsResponse{
    repeated OrderItemRecord items = 1;
    string err = 2;
}

message RemoveCartItemRequest{
    string cartid = 1;
}

message RemoveCartItemResponse{
    string err = 1;
}

message UpdateQuantityRequest{
    string productid = 1;
    string userid = 3;
    string cartid = 4;
    int32 quantity = 5;
}

message UpdateQuantityResponse{
    string err = 1;
}

service OrderRpcService{
	rpc CreateOrder(CreateOrderRequest) returns (CreatedOrderResponse) {}
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
    rpc AddCart(CreateCartRequest) returns (CreatedCartResponse) {}
    rpc GetCartItems(GetCartItemsRequest) returns (GetCartItemsResponse) {}
    rpc RemoveCartItem(RemoveCartItemRequest) returns (RemoveCartItemResponse) {}
    rpc UpdateQuantity(UpdateQuantityRequest) returns (UpdateQuantityResponse) {}
}